@@ -24,6 +24,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8211. DataNode UUID is always null in the JMX counter. (Anu Engineer
     via Arpit Agarwal)
 
+    HDFS-8205. CommandFormat#parse() should not parse option as
+    value of option. (Peter Shi and Xiaoyu Yao via Arpit Agarwal)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
